Copy form index.html

--- a/Instructions.html
+++ b/Instructions.html
@@ -20,5 +20,9 @@
                      alt="logo université UQÀM" width="40px"></a></li>
         </ul>
     </nav>
+    <a class="right-bg" href="https://i.pinimg.com/originals/8b/e3/a3/8be3a3c410c4f6373c4cd1974b592fed.jpg"
+       title="Cliquez ici pour télécharger l'image"></a>
+    <a class="left-bg" href="https://static3.bigstockphoto.com/0/9/1/large1500/190563625.jpg"
+       title="Cliquez ici pour télécharger l'image"></a>
 </body>
 </html>
