Fondation 100% done, index & Formulaire done.

--- a/About-us.html
+++ b/About-us.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav>
-    <ul>
+    <ul class="menu">
         <li><a href="index.html">Page principale</a></li>
         <li><a href="About-us.html">À propos de nous</a></li>
         <li><a href="Instructions.html">Comment ci-prendre</a></li>
