--- a/Instructions.html
+++ b/Instructions.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="menu">
             <li><a href="index.html">Page principale</a></li>
             <li><a href="About-us.html">À propos de nous</a></li>
             <li><a href="Instructions.html">Comment ci-prendre</a></li>
@@ -20,9 +20,19 @@
                      alt="logo université UQÀM" width="40px"></a></li>
         </ul>
     </nav>
+    <div class="main">
     <a class="right-bg" href="https://i.pinimg.com/originals/8b/e3/a3/8be3a3c410c4f6373c4cd1974b592fed.jpg"
        title="Cliquez ici pour télécharger l'image"></a>
     <a class="left-bg" href="https://static3.bigstockphoto.com/0/9/1/large1500/190563625.jpg"
        title="Cliquez ici pour télécharger l'image"></a>
+<!--    <footer>
+        <ul>
+            <li><a href="#top">Revenir au début de page</a></li>
+            <li><a href="#description">Revenir à la description</a></li>
+            <li><a href="#updates">Revenir aux mise à jour</a></li>
+            <li>Copyright 2020 All Rights Reserved</li>
+        </ul>
+    </footer> -->
+    </div>
 </body>
 </html>
