--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     </ul>
 </nav>
 <div class="main">
-    <a class="right-bg" href="https://i.pinimg.com/originals/8b/e3/a3/8be3a3c410c4f6373c4cd1974b592fed.jpg"
-       target="_blank" title="Cliquez ici pour télécharger l'image"></a>
-    <a class="left-bg" href="https://static3.bigstockphoto.com/0/9/1/large1500/190563625.jpg"
-       target="_blank" title="Cliquez ici pour télécharger l'image"></a>
+    <div class="right-bg"></div>
+    <div class="left-bg"></div>
     <a href="https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-1.2.1&q=80&fm=jpg&crop
         =entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9"
        target="_blank" title="Cliquez ici pour télécharger l'image">
@@ -45,14 +43,14 @@
                 Ce site web à été conçu pour ceux qui cherche à réparer leur composants électroniques! Plus spécifiquement,
                 Nami's Fixest un service de réparation offert pour ceux qui désirent changer, remplacer, maintenir leur
                 composants électronique d'ordinateurs. Rendez-vous dans la section <a class="lien-textuel"
-                                                                                      href="Instructions.html"
+                                                                                      href="../../Documents/INF3190_A2020/Instructions.html"
                                                                                       target="_blank">
                                                                                         'Comment ci-prendre'</a>
                 pour commencer votre demande! Si vous avez des questions à propos des procédures de livraison et
                 réparation, n'hésitez-pas à nous envoyez un <a class="lien-textuel-mail"
                                                                href="mailto:reghbati.nami@courrier.uqam.ca">courriel</a>.
                 *Pour plus d'informations concernant nos termeset conditions visitez la section <a class="lien-textuel"
-                                                                                                   href="About-us.html">'À propos de nous'</a>.
+                                                                                                   href="../../Documents/INF3190_A2020/About-us.html">'À propos de nous'</a>.
             </span>
     </div>
     <div class="updates" id="updates">
@@ -70,7 +68,8 @@
             </li>
         </ul>
         <p>*Pour plus d'informations concernant ces ajouts, cliquez sur ce <a class="lien-textuel"
-                                                                              href="Instructions.html" target="_blank">
+                                                                              href="../../Documents/INF3190_A2020/Instructions.html"
+                                                                              target="_blank">
             lien</a></p>
     </div>
     <br>
@@ -92,7 +91,8 @@
         <br>
         **Seulement les tarifs de mains d'oeuvres sont augmenté. Les tarifs de livraison restent INTACT.<br>
         *Pour plus d'informations, veuillez visiter la section <a class="lien-textuel"
-                                                                  href="Instructions.html">Comment ci-prendre</a>
+                                                                  href="../../Documents/INF3190_A2020/Instructions.html">Comment
+        ci-prendre</a>
         dans la barre de navigation
     </div>
     <footer>
