--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li><a href="#top">Revenir au début de page</a></li>
             <li><a href="#description">Revenir à la description</a></li>
             <li><a href="#updates">Revenir aux mise à jour</a></li>
-            <li>Copyright 2020<br><br>All Rights Reserved</li>
+            <li>Copyright 2020&copy; Nami's Fix&trade; All Rights Reserved</li>
         </ul>
     </footer>
 </div>
