90% done, missing about-us

--- a/About-us.html
+++ b/About-us.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>À propos de nous</title>
-    <link href="style-main.css" rel="stylesheet">
+    <link href="style-about-us.css" rel="stylesheet">
 </head>
-<body>
+<body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="index.html">Page principale</a></li>
+        <li><a href="Index.html">Page principale</a></li>
         <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Instructions.html">Comment ci-prendre</a></li>
+        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
         <li><a href="Contact-us.html">Contactez nous</a></li>
         <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
@@ -32,20 +32,28 @@
             de projet sur la page ouvrante." class="image-intro"
              src="https://cdn.pixabay.com/photo/2015/06/24/01/21/creativity-819371_960_720.jpg">
     </a>
-    <h1>Notre Mission</h1>
-    <section class="description">
-        <span>
+    <section id="description" class="description-mission">
+        <h1>Notre Mission</h1>
+        <p>
             Ce site web à été conçu pour ceux qui cherche à réparer leur composants électronique! Plus spécifiquement, Nami's Fix
             est un service de réparation offert pour ceux qui désirent changer, remplacer, maintenir leur composants
             électronique d'ordinateurs.
-        </span>
+        </p>
     </section>
+    <a href="https://pixabay.com/photos/startup-start-up-people-593341/"
+       target="_blank" title="Cliquez ici pour téléchargé l'image.">
+        <img alt="Un papier bleu foncé écrasé sur un carnet de note ouvert avec des dessins d'inspirations
+            de projet sur la page ouvrante." class="image-description-right"
+             src="https://cdn.pixabay.com/photo/2015/01/08/18/27/startup-593341_960_720.jpg"></a>
 </section>
+    <section id="termes-et-conditions">
+        <!--TODO-->
+    </section>
 <footer>
     <ul>
         <li><a href="#top">Revenir au début de page</a></li>
         <li><a href="#description">Revenir à la description</a></li>
-        <li><a href="#updates">Revenir aux mise à jour</a></li>
+        <li><a href="#termes-et-conditions">Revenir aux termes et conditions</a></li>
         <li>Copyright 2020&copy; Nami's Fix&trade; All Rights Reserved</li>
     </ul>
 </footer>
