--- a/Contact-us.html
+++ b/Contact-us.html
@@ -8,9 +8,9 @@
 <body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="index.html">Page principale</a></li>
+        <li><a href="Index.html">Page principale</a></li>
         <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Instructions.html">Comment ci-prendre</a></li>
+        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
         <li><a href="Contact-us.html">Contactez nous</a></li>
         <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
@@ -41,46 +41,81 @@
                 nous aussi, nous permettant de vous aider plus rapidement. Si aucunes des réponses aux questions
                 quotidiennes peuvent vous dépanner, veuillez jeter un coup d'oeil à cette vidéo éducationnelle
                 qui peux être la solution à vos problèmes, car elle contient des aspects très techniques et
-                spécialisé qui sont souvent ignoré lors du dépannage.
+                spécialisé qui sont souvent ignoré lors du dépannage. Questions ou craintes de nos modalités
+                depuis la pandémie? <a class="lien-textuel"
+                                       href="Index.html#updates">Informez-vous de nos mises à jour</a>
+                pour en savoir plus!
             </span>
     </section>
     <iframe src="https://www.youtube.com/embed/RS86yISR66c?autoplay=1&mute=1"></iframe>
     <section class="faq" id="faq">
-        <h2>FAQ</h2>
+        <h3>Foire aux questions</h3>
+        <h2>(FAQ)</h2>
         <ul>
             <li class="faq-questions">Q: À quel adresse courriel envoie t'ai-je ma demande de réparation?</li>
-            <li class="faq-reponse">A: <u>À cette adresse: reghbati.nami@courrier.uqam.ca.</u></li>
+            <li class="faq-reponse">A: À cette adresse: <a class="lien-textuel-mail"
+                                                           href="mailto:reparation.nettoyage-contact-us@courrier.uqam.ca">
+                <u>reparation.nettoyage-contact-us@courrier.uqam.ca.</u></a> Assurez-vous que vous avez lu et suivi les
+                consignes spécifier <a class="lien-textuel" href="Processus-de-reparation.html#application-demande">ici</a></li>
             <li class="faq-questions">Q: Est-ce que j'ai besoin de m'abonner ou de créer un compte pour avoir accès aux
                 services?
             </li>
-            <li class="faq-reponse">A: <u>Non, vous avez seulement besoin d'une adresse de courriel et postale
-                valide.</u></li>
+            <li class="faq-reponse">A: Non, vous avez seulement besoin d'une adresse de courriel et postale
+                valide.
+            </li>
             <li class="faq-questions">Q: Comment je paye ma demande de réparation?</li>
-            <li class="faq-reponse">A: <u>Tout sera expliquez par un de nos agent lorsque vous recevrez l'évaluation de
-                votre
-                demande par courriel.</u></li>
+            <li class="faq-reponse">A: Tout sera expliquez par un de nos agent lorsque vous recevrez l'évaluation de
+                votre demande par courriel.
+            </li>
             <li class="faq-questions">Q: Quels sont les équipements elligibles à réparer? Réparez-vous les appareils
                 mobiles aussi?
             </li>
-            <li class="faq-reponse">A: <u>Non, nous avons pas de plans pour le moment pour inclure la réparation des
-                appareils mobiles. La liste complète des appareils acceptés se trouve dans la section 'Comment
-                ci-prendre'.</u></li>
+            <li class="faq-reponse">A: Non, nous avons pas de plans pour le moment pour inclure la réparation des
+                appareils mobiles. La liste complète des appareils acceptés se trouve dans la section
+                <a class="lien-textuel" href="Processus-de-reparation.html#equipementSupporte">'Comment ci-prendre'.</a></li>
             <li class="faq-questions">Q: Je ne vis pas au Canada, est-ce que je peux quand même profiter de vos services
                 de livraisons?
             </li>
-            <li class="faq-reponse">A: <u>Oui, suite à la pandémie, nous avons répandue notre réseau de livraison pour
+            <li class="faq-reponse">A: Oui, suite à la pandémie, nous avons répandue notre réseau de livraison pour
                 couvrir
                 l'Amérique au complet! En revanche, des tarifs supplémentaires seront comptabilisé dépendemment de votre
-                région.</u></li>
+                région.
+            </li>
             <li class="faq-questions">Q: Est-ce que vos termes et conditions ont changé depuis la pandémie?</li>
-            <li class="faq-reponse">A: <u>Absolument, les termes et conditions mise à jour sont maintenant disponible
-                sur notre page principale, ainsi que la section 'Comment ci-prendre'.</u></li>
+            <li class="faq-reponse">A: Absolument, les termes et conditions mise à jour sont maintenant disponible
+                sur notre page principale, ainsi que la section <u>Processus de réparation'</u>.
+            </li>
+            <li class="faq-questions">Q: Pourquoi est-ce que les tarifs de réparations sont significativement plus chers
+                pour les composants Macintosh comparé à ceux de Windows?
+            </li>
+            <li class="faq-reponse">Q: Les Macintoshs ont très souvent des composants beaucoup plus minucieux et
+                difficile à maintenir et modifier. Pour cette raison, nous avons mis en place des outils spéciaux
+                pour faire la tâche, ainsi que nos spécialistes en Mac pour grandement accéléré le processus de
+                réparation. Donc, oui le tarif par heure est augmenté, mais en revanche la réparation est complété
+                beaucoup plus rapidement, sauvant des heures de main-d'oeuvres qui auraient été payé par le client dans
+                le cas
+                contraire.
+            </li>
+            <li class="faq-questions">Q: Est-ce que c'est moi qui se trompe ou il n'y a pas de tarifs de livraison?
+            </li>
+            <li class="faq-reponse">A: Vous ne vous trompez pas! Suite à la pandémie, nous avons augmenté les tarifs
+                de main d'oeuvres de réparation, mais nous avons compensés en diminuant le plus possible les tarifs de
+                livraisons. Dans votre cas, vous habitez sûrement au Canada ou au États-Unis, donc la livraison est
+                gratuite.
+            </li>
+            <li class="faq-questions">Q: Ma demande de réparation a été refusé en raison de 'manque de communication'
+                ! Qu'est-ce que ça veut dire?
+            </li>
+            <li class="faq-reponse">A: Vous n'avez pas répondu à un de nos agent pendant le délai de 72 heures.
+                Votre demande est refusé en conséquent, ce qui veut dire que vous devez reformuler une demande
+                pour que celle-ci soit de nouveaux prise en considération par nos agents.
+            </li>
         </ul>
         <br>
         <br>
     </section>
     <section class="format-courriel" id="formatDuCourriel">
-        <h3>Assurez-vous que :</h3>
+        <h3>Vos questions ne sont pas inscrites ici? Pas de problème! Assurez-vous que :</h3>
         <ol>
             <li>Vous avez un adresse courriel valide.</li>
             <li>Vous nous excluez de votre boîte à spam et d'ordure. Certains services de messageries nous considère
@@ -91,15 +126,15 @@
                 description de/des question(s) qui n'ont pas été répondu à l'aide du site web.
             </li>
             <li>De comprendre le français ou anglais!</li>
-            <li>Voilà! Une fois sûr d'avoir suivi les exigences précédentes, contactez-nous avec cette adresse :</li>
+            <li>Voilà! Une fois sûr d'avoir suivi les exigences précédentes, contactez-nous en cliquant sur cette
+                adresse :
+            </li>
         </ol>
         <a class="lien-textuel-mail" href="mailto:questions-contact-us@courrier.uqam.ca">
-            questions-contact-us@courrier.uqam.ca</a>
+            <u>questions-contact-us@courrier.uqam.ca</u></a>
+        <p class="remerciements">Merci beaucoup de votre lecture et respect de ces exigences. Elles sont seulement mise en place pour
+            faciliter et accélérer vos demandes!</p>
     </section>
-    <br>
-    <br>
-    <span>Merci beaucoup de votre lecture et respect de ces exigences. Elles sont seulement mise en place pour
-        faciliter vos demandes!</span>
 </section>
 <footer>
     <ul>
