--- a/Contact.html
+++ b/Contact.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Contactez nous</title>
-    <link href="style-contact-us.css" rel="stylesheet">
+    <link href="style-contact.css" rel="stylesheet">
 </head>
 <body id="top">
 <nav>
     <ul class="menu">
         <li><a href="Index.html">Page principale</a></li>
-        <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
-        <li><a href="Contact-us.html">Contactez nous</a></li>
-        <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
+        <li><a href="Informations.html">Informations</a></li>
+        <li><a href="Contact.html">Contactez nous</a></li>
+        <li><a href="Commande.php">Requêtes/Plaintes</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
@@ -59,7 +58,7 @@
                                                            href="mailto:reparation.nettoyage-contact-us@courrier.uqam.ca">
                 <u>reparation.nettoyage-contact-us@courrier.uqam.ca.</u></a> Assurez-vous que vous avez lu et suivi les
                 consignes spécifier <a class="lien-textuel"
-                                       href="Processus-de-reparation.html#format-courriel">ici</a></li>
+                                       href="Informations.html#format-courriel">ici</a></li>
             <li class="faq-questions">Q: Est-ce que j'ai besoin de m'abonner ou de créer un compte pour avoir accès aux
                 services?
             </li>
@@ -75,7 +74,7 @@
             </li>
             <li class="faq-reponse">A: Non, nous avons pas de plans pour le moment pour inclure la réparation des
                 appareils mobiles. La liste complète des appareils acceptés se trouve dans la section
-                <a class="lien-textuel" href="Processus-de-reparation.html#equipementSupporte">'Comment ci-prendre'.</a>
+                <a class="lien-textuel" href="Informations.html#equipementSupporte">'Comment ci-prendre'.</a>
             </li>
             <li class="faq-questions">Q: Je ne vis pas au Canada, est-ce que je peux quand même profiter de vos services
                 de livraisons?
