--- a/Index.html
+++ b/Index.html
@@ -10,12 +10,10 @@
     <ul class="menu">
         <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Page principale</a>
         </li>
-        <li><a href="About-us.html" title="En savoir plus sur le site et les services données">
-            À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html" title="Allez vers la page qui informe comment utilisé les services">
-            Processus de réparation</a></li>
-        <li><a href="Contact-us.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
-        <li><a href="Formulaire.php"
+        <li><a href="Informations.html" title="Allez vers la page qui informe comment utilisé les services">
+            Informations</a></li>
+        <li><a href="Contact.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
+        <li><a href="Commande.php"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
             Requêtes/Plaintes</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
@@ -49,14 +47,11 @@
             Ce site web à été conçu pour ceux qui cherche à réparer leur composants électroniques! Plus spécifiquement,
             Nami's Fixest un service de réparation offert pour ceux qui désirent changer, remplacer, maintenir leur
             composants électronique d'ordinateurs. Rendez-vous dans la section <a class="lien-textuel"
-                                                                                  href="Processus-de-reparation.html">
+                                                                                  href="Informations.html">
             'Processus de réparation'</a>
             pour commencer votre demande! Si vous avez des questions à propos des procédures de livraison et
             réparation, n'hésitez-pas à nous envoyez un <a class="lien-textuel-mail"
-                                                           href="Contact-us.html#formatDuCourriel">courriel</a>.
-            *Pour plus d'informations concernant nos termes et conditions visitez la section <a class="lien-textuel"
-                                                                                                href="About-us.html">'À
-            propos de nous'</a>.
+                                                           href="Contact.html#formatDuCourriel">courriel</a>.
         </p>
     </section>
     <section class="updates" id="updates">
@@ -83,7 +78,7 @@
         <p>**Les tarifs pour les services de nettoyage peuvent variés selon la propagation du Covid-19.
             Pour plus d'informations concernant les tarifs et les nouveaux services, cliquez sur ce <a
                     class="lien-textuel"
-                    href="Processus-de-reparation.html">
+                    href="Informations.html">
                 lien</a></p>
     </section>
     <br>
@@ -107,8 +102,7 @@
         diminué, suite à la pandémie pour offrir de l'aide pour ceux qui ont besoin d'une station de travail
         fonctionnelle au plus vite pour leurs travail et/ou école.<br>
         *Pour plus d'informations, veuillez visiter la section <a class="lien-textuel"
-                                                                  href="Processus-de-reparation.html">Processus de
-        réparation</a>
+                                                                  href="Informations.html">Informations</a>
         dans la barre de navigation
     </section>
 </section>
