--- a/Informations.html
+++ b/Informations.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Processus de réparation</title>
-    <link href="style-reparation.css" rel="stylesheet">
+    <title>Informations</title>
+    <link href="style-Informations.css" rel="stylesheet">
 </head>
 <body id="top">
 <nav>
     <ul class="menu">
         <li><a href="Index.html">Page principale</a></li>
-        <li><a href="About-us.html">À propos de nous</a></li>
-        <li><a href="Processus-de-reparation.html">Processus de réparation</a></li>
-        <li><a href="Contact-us.html">Contactez nous</a></li>
-        <li><a href="Formulaire.php">Requêtes/Plaintes</a></li>
+        <li><a href="Informations.html">Informations</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="Commande.php">Commandez</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
