--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,10 @@
         </li>
         <li><a href="Informations.html" title="Allez vers la page qui informe comment utilisé les services">
             Informations</a></li>
-        <li><a href="Contact.html" title="Contactez-nous en cliquant sur ce lien">Contactez nous</a></li>
+        <li><a href="Contact.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
         <li><a href="Commande.php"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
-            Requêtes/Plaintes</a></li>
+            Commande</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
@@ -48,7 +48,7 @@
             Nami's Fixest un service de réparation offert pour ceux qui désirent changer, remplacer, maintenir leur
             composants électronique d'ordinateurs. Rendez-vous dans la section <a class="lien-textuel"
                                                                                   href="Informations.html">
-            'Processus de réparation'</a>
+            'Informations'</a>
             pour commencer votre demande! Si vous avez des questions à propos des procédures de livraison et
             réparation, n'hésitez-pas à nous envoyez un <a class="lien-textuel-mail"
                                                            href="Contact.html#formatDuCourriel">courriel</a>.
