--- a/Informations.html
+++ b/Informations.html
@@ -11,7 +11,7 @@
         <li><a href="Index.html">Page principale</a></li>
         <li><a href="Informations.html">Informations</a></li>
         <li><a href="Contact.html">Contact</a></li>
-        <li><a href="Commande.php">Commandez</a></li>
+        <li><a href="Commande.php">Commande</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
@@ -138,8 +138,8 @@
 <footer>
     <ul>
         <li><a href="#top">Revenir au début de page</a></li>
-        <li><a href="#equipementSupporte">Revenir aux équipements supportés</a></li>
-        <li><a href="#format-courriel">Revenir aux exigences concernant la demande</a></li>
+        <li><a href="#equipementSupporte">Revenir aux lunchs disponibles</a></li>
+        <li><a href="#format-courriel">Revenir aux exigences concernant la commande</a></li>
         <li>&copy; Copyright 2020 Nami's Fix&trade; All Rights Reserved</li>
     </ul>
 </footer>
