--- a/Contact.html
+++ b/Contact.html
@@ -10,8 +10,8 @@
     <ul class="menu">
         <li><a href="Index.html">Page principale</a></li>
         <li><a href="Informations.html">Informations</a></li>
-        <li><a href="Contact.html">Contactez nous</a></li>
-        <li><a href="Commande.php">Requêtes/Plaintes</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="Commande.php">Commande</a></li>
         <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
