--- a/Contact.html
+++ b/Contact.html
@@ -39,10 +39,7 @@
                 C'est pour cela que nous allons répondre aux questions les plus fréquemments posées (FAQ). Veuillez svp
                 adhérer aux exigences ci-dessous si vous voulez que votre courriel soit valide. Non seulement vous avez
                 plus de chances que votre courriel soit évalué, mais, de plus, ceci accélerera le processus pour
-                nous aussi, nous permettant de vous aider plus rapidement. Si aucunes des réponses aux questions
-                quotidiennes peuvent vous dépanner, veuillez jeter un coup d'oeil à cette vidéo éducationnelle
-                qui peux être la solution à vos problèmes, car elle contient des aspects très techniques et
-                spécialisé qui sont souvent ignoré lors du dépannage. Questions ou craintes de nos modalités
+                nous aussi, nous permettant de vous aider plus rapidement. Questions ou craintes de nos modalités
                 depuis la pandémie? <a class="lien-textuel"
                                        href="Index.html#updates">Informez-vous de nos mises à jour</a>
                 pour en savoir plus!
@@ -53,60 +50,32 @@
         <h3>Foire aux questions</h3>
         <h2>(FAQ)</h2>
         <ul>
-            <li class="faq-questions">Q: À quel adresse courriel envoie t'ai-je ma demande de réparation?</li>
+            <li class="faq-questions">Q: À quel adresse courriel envoie t'ai-je ma demande?</li>
             <li class="faq-reponse">A: À cette adresse: <a class="lien-textuel-mail"
                                                            href="mailto:reparation.nettoyage-contact-us@courrier.uqam.ca">
-                <u>reparation.nettoyage-contact-us@courrier.uqam.ca.</u></a> Assurez-vous que vous avez lu et suivi les
-                consignes spécifier <a class="lien-textuel"
+                <u>lunch.ecolier-contact-us@courrier.uqam.ca.</u></a> Assurez-vous que vous avez lu à propos des services
+                offerts <a class="lien-textuel"
                                        href="Informations.html#format-courriel">ici</a></li>
             <li class="faq-questions">Q: Est-ce que j'ai besoin de m'abonner ou de créer un compte pour avoir accès aux
                 services?
             </li>
-            <li class="faq-reponse">A: Non, vous avez seulement besoin d'une adresse de courriel et postale
-                valide.
+            <li class="faq-reponse">A: Non, vous avez seulement besoin d'une adresse d'école valide ainsi que le nom
+                complet de l'enfant qui suit des cours à cette école valide.
             </li>
-            <li class="faq-questions">Q: Comment je paye ma demande de réparation?</li>
-            <li class="faq-reponse">A: Tout sera expliquez par un de nos agent lorsque vous recevrez l'évaluation de
-                votre demande par courriel.
+            <li class="faq-questions">Q: Quels sont les repas elligibles à mon enfant?
             </li>
-            <li class="faq-questions">Q: Quels sont les équipements elligibles à réparer? Réparez-vous les appareils
-                mobiles aussi?
+            <li class="faq-reponse">A: La liste complète des repas offert se trouve dans la section
+                <a class="lien-textuel" href="Informations.html#equipementSupporte">informations.</a>
             </li>
-            <li class="faq-reponse">A: Non, nous avons pas de plans pour le moment pour inclure la réparation des
-                appareils mobiles. La liste complète des appareils acceptés se trouve dans la section
-                <a class="lien-textuel" href="Informations.html#equipementSupporte">'Comment ci-prendre'.</a>
+            <li class="faq-questions">Q: Mon enfant suit des cours à distance, est-il elligible aux repas quand même?
             </li>
-            <li class="faq-questions">Q: Je ne vis pas au Canada, est-ce que je peux quand même profiter de vos services
-                de livraisons?
-            </li>
-            <li class="faq-reponse">A: Oui, suite à la pandémie, nous avons répandue notre réseau de livraison pour
-                couvrir
-                l'Amérique au complet! En revanche, des tarifs supplémentaires seront comptabilisé dépendemment de votre
-                région.
+            <li class="faq-reponse">A: Non, ces repas sont seulement accessible à la caféteria du campus.
             </li>
             <li class="faq-questions">Q: Est-ce que vos termes et conditions ont changé depuis la pandémie?</li>
             <li class="faq-reponse">A: Absolument, les termes et conditions mise à jour sont maintenant disponible
                 sur notre page principale, ainsi que la section <u>Processus de réparation'</u>.
             </li>
-            <li class="faq-questions">Q: Pourquoi est-ce que les tarifs de réparations sont significativement plus chers
-                pour les composants Macintosh comparé à ceux de Windows?
-            </li>
-            <li class="faq-reponse">Q: Les Macintoshs ont très souvent des composants beaucoup plus minucieux et
-                difficile à maintenir et modifier. Pour cette raison, nous avons mis en place des outils spéciaux
-                pour faire la tâche, ainsi que nos spécialistes en Mac pour grandement accéléré le processus de
-                réparation. Donc, oui le tarif par heure est augmenté, mais en revanche la réparation est complété
-                beaucoup plus rapidement, sauvant des heures de main-d'oeuvres qui auraient été payé par le client dans
-                le cas
-                contraire.
-            </li>
-            <li class="faq-questions">Q: Est-ce que c'est moi qui se trompe ou il n'y a pas de tarifs de livraison?
-            </li>
-            <li class="faq-reponse">A: Vous ne vous trompez pas! Suite à la pandémie, nous avons augmenté les tarifs
-                de main d'oeuvres de réparation, mais nous avons compensés en diminuant le plus possible les tarifs de
-                livraisons. Dans votre cas, vous habitez sûrement au Canada ou au États-Unis, donc la livraison est
-                gratuite.
-            </li>
-            <li class="faq-questions">Q: Ma demande de réparation a été refusé en raison de 'manque de communication'
+            <li class="faq-questions">Q: Ma demande de repas a été refusé en raison de 'manque de communication'
                 ! Qu'est-ce que ça veut dire?
             </li>
             <li class="faq-reponse">A: Vous n'avez pas répondu à un de nos agent pendant le délai de 72 heures.
@@ -123,7 +92,7 @@
             <li>Vous avez un adresse courriel valide.</li>
             <li>Vous nous excluez de votre boîte à spam et d'ordure. Certains services de messageries nous considère
                 comme du spam, assurez-vous de vérifiez votre onglet spam lorsque vous recevrez un message automatique
-                pour confirmer votre demande de question.
+                pour confirmer votre demande.
             </li>
             <li>Vous incrivez votre prénom, nom, adresse postale, ainsi que une courte
                 description de/des question(s) qui n'ont pas été répondu à l'aide du site web.
@@ -146,7 +115,7 @@
         <li><a href="#description">Revenir à la description</a></li>
         <li><a href="#faq">Revenir aux questions quotidiennes</a></li>
         <li><a href="#formatDuCourriel">Revenir aux pré-requis</a></li>
-        <li>&copy; Copyright 2020 Nami's Fix&trade; All Rights Reserved</li>
+        <li>&copy; Copyright 2020 Lunch Ecolier&trade; All Rights Reserved</li>
     </ul>
 </footer>
 </body>
