--- a/Contact.html
+++ b/Contact.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>Contactez nous</title>
     <link href="style-contact.css" rel="stylesheet">
+    <link rel="icon" href="favicon-32x32.png">
 </head>
 <body id="top">
 <nav>
     <ul class="menu">
-        <li><a href="Index.html">Page principale</a></li>
-        <li><a href="Informations.html">Informations</a></li>
-        <li><a href="Contact.html">Contact</a></li>
-        <li><a href="Commande.php">Commande</a></li>
-        <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
+        <li><a href="Index.html" title="Visitez la page principale pour consulter les mis à jours">Page principale</a></li>
+        <li><a href="Informations.html" title="Allez vers la page qui informe comment utilisé les services">Informations</a></li>
+        <li><a href="Contact.html" title="Contactez-nous en cliquant sur ce lien">Contact</a></li>
+        <li><a href="Commande.php" title="Faire une demande de remboursement ou faire une requête d'un nouveau service">Commande</a></li>
+        <li><a class="logo" href="https://github.com/Nami-R2301/INF3190_A2020"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
             <img alt="logo Github" height="16px" src="https://image.flaticon.com/icons/png/512/25/25231.png"
@@ -45,12 +46,11 @@
                 pour en savoir plus!
             </span>
     </section>
-    <iframe src="https://www.youtube.com/embed/RS86yISR66c?autoplay=1&mute=1"></iframe>
     <section class="faq" id="faq">
         <h3>Foire aux questions</h3>
         <h2>(FAQ)</h2>
         <ul>
-            <li class="faq-questions">Q: À quel adresse courriel envoie t'ai-je ma demande?</li>
+            <li class="faq-questions">Q: À quel adresse courriel envoie t'ai-je lors d'un problème technique?</li>
             <li class="faq-reponse">A: À cette adresse: <a class="lien-textuel-mail"
                                                            href="mailto:reparation.nettoyage-contact-us@courrier.uqam.ca">
                 <u>lunch.ecolier-contact-us@courrier.uqam.ca.</u></a> Assurez-vous que vous avez lu à propos des services
