--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Nami's Fix</title>
     <link href="style-main.css" rel="stylesheet">
+    <link rel="icon" href="favicon-32x32.png">
 </head>
 <body id="top">
 <nav>
@@ -16,7 +17,7 @@
         <li><a href="Commande.php"
                title="Faire une demande de remboursement ou faire une requête d'un nouveau service">
             Commande</a></li>
-        <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
+        <li><a class="logo" href="https://github.com/Nami-R2301/INF3190_A2020"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
             <img alt="logo Github" height="16px" src="https://image.flaticon.com/icons/png/512/25/25231.png"
