--- a/Informations.html
+++ b/Informations.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Informations</title>
     <link href="style-Informations.css" rel="stylesheet">
+    <link rel="icon" href="favicon-32x32.png">
 </head>
 <body id="top">
 <nav>
@@ -12,7 +13,7 @@
         <li><a href="Informations.html">Informations</a></li>
         <li><a href="Contact.html">Contact</a></li>
         <li><a href="Commande.php">Commande</a></li>
-        <li><a class="logo" href="https://github.com/Nami-R2301?tab=repositories"
+        <li><a class="logo" href="https://github.com/Nami-R2301/INF3190_A2020"
                target="_blank"
                title="Cliquez ici pour consulté/contribué à la création du site web">
             <img alt="logo Github" height="16px" src="https://image.flaticon.com/icons/png/512/25/25231.png"
